--- a/public/admin.html
+++ b/public/admin.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Admin - Send Newsletter</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Send message to user Email</title>
+    <link rel="stylesheet" href="message_style.css">
+    <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
-    <h1>Send Newsletter</h1>
-    <form id="newsletterForm">
-        <label for="message">Message:</label>
-        <textarea id="message" required></textarea>
-        <button type="submit">Send</button>
-    </form>
-    <div id="messageSent" style="display:none;">Newsletter Sent!</div>
+    <div class="form-container">
+        <form id="messageForm" action="javascript:void(0);" method="post">
+            <div class="header">
+                <h1>Send Message to Subscribers!</h1>
+            </div>
+            <div class="form-group">
+                <label for="subject">Subject:</label>
+                <input type="text" id="subject" name="subject" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+            </div>
+            <div class="form-group">
+                <button type="submit">Send Message</button>
+            </div>
+        </form>
+        <div class="message-sent" id="messageSent">
+            <p>Your message has been sent!</p>
+        </div>
+    </div>
 
-    <script type="module" src="admin.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
